# kopiika-ai

./: .gitignore  README.md  docker-compose.yml  project-context.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.beat  Dockerfile.worker  Makefile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0a5a47b6bb15_add_financial_health_scores_table.py  3f046f0dbf8a_add_index_card_interactions_created_at.py  4c94b3ca32be_create_uploads_processing_jobs.py  a3b4c5d6e7f8_widen_bank_format_registry_hint.py  a7b9c1d2e3f4_create_user_consents_table.py  b2c3d4e5f6a7_create_insights_table.py  b5e8d1f2a3c7_add_revoked_at_to_user_consents.py  b7d9e1f3a2c4_create_transactions_table.py  c3d4e5f6a7b8_add_financial_profiles_table.py  c7f9e3d4b1a8_make_granted_at_nullable.py  c8e2f4a6b0d1_add_result_data_to_processing_jobs.py  ca1c04c7b2e9_add_chat_message_role_tool.py  d8a0f2c4e6b9_consent_granted_at_server_default.py  d9f3a5b7c1e2_add_detected_delimiter_to_uploads.py  e0f04e4194bc_migrate_document_embeddings_to_halfvec_.py  e1a2b3c4d5f6_add_dedup_hash_to_transactions.py  e3c5f7d9b2a1_add_chat_sessions_and_messages.py  (+23 more)
backend/app/: main.py
backend/app/agents/: llm.py  (+5 more)
backend/scripts/: recompute_health_score.py
backend/tests/: conftest.py  test_account_deletion_api.py  test_audit_middleware.py  test_auth.py  test_chat_history_endpoints.py  test_chat_models.py  test_chat_rate_limit.py  test_chat_role_tool_migration.py  test_chat_schema_cascade.py  test_circuit_breaker.py  test_cluster_flagging_task.py  test_consent.py  test_consent_chat.py  test_consent_service.py  test_currency_map.py  test_data_summary_api.py  test_embeddings.py  test_error_handlers.py  test_feedback_api.py  test_feedback_service.py  test_feedback_vote_api.py  test_flagged_transactions.py  test_format_detection.py  test_format_detector.py  test_generic_parser.py  test_health.py  test_health_score_api.py  test_health_score_service.py  test_insights.py  test_jobs.py  test_milestone_feedback_api.py  test_monobank_parser.py  test_parse_validator.py  test_parser_service_validation.py  test_pipeline_checkpointing.py  test_privatbank_parser.py  test_processing_tasks.py  test_profile_api.py  test_profile_service.py  test_rag_retrieval.py  (+6 more)
(+744 files in other folders)
