[project]
name = "backend"
version = "0.1.0"
description = "Kopiika AI backend — FastAPI service for AI-powered personal finance education"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "boto3>=1.42.73",
    "celery>=5.6.2",
    "langchain-anthropic>=0.3.0",
    "langchain-aws>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "pgvector>=0.3.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg[binary]>=3.2.0",
    "charset-normalizer>=3.4.0",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.0",
    "redis>=7.3.0",
    "regex>=2024.0.0",
    "sqlmodel>=0.0.37",
    "tiktoken>=0.8.0",
    "uvicorn>=0.42.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-m 'not integration and not provider_matrix'"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: hits live external services (LLMs, APIs); excluded from default sweep, run with '-m integration'",
    "eval: evaluation harnesses (RAG eval, insight-quality eval); opt-in via '-m eval', combined with integration",
    "provider_matrix: cross-provider LLM regression matrix (Story 9.5c). Hits real LLM APIs — opt-in via -m provider_matrix.",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "fakeredis>=2.26.0",
    "greenlet>=3.3.2",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.7",
]
